# TVML

./: .gitignore  FromBinToPt.ipynb  I_PPdag.ipynb  I_PPdag.py  OperationsTest.ipynb  Profile.ipynb  README.md  convert_to_pt.py  gauge_equivariant.py  junk.py  loss_function.py  model.py  opendataset.py  operators.py  operators_torch.py  parameters.py  train.py  utils.py
AMG/: CMakeLists.txt  config.txt
AMG/include/: amg.h  app_config.h  bi_cgstab.h  boundary.h  config.h  config.h.in  conjugate_gradient.h  dirac_operator.h  fgmres.h  gauge_conf.h  level.h  lin_alg_op.h  params.h  sap.h  tests.h  utils.h  variables.h
AMG/src/: amg.cpp  app_config.cpp  bi_cgstab.cpp  conjugate_gradient.cpp  dirac_operator.cpp  fgmres.cpp  gauge_conf.cpp  level.cpp  main.cpp  plaquette_generator.cpp  sap.cpp  tests.cpp  tvec_generator.cpp  variables.cpp
GAN_vectors/: data_loader.py  eval_gan.py  gan_v.ipynb  model_gan.py  tests.py  train_gan.py
junk/: count_params.py  junk.py  loss.py  previous_models.py
sap/: CMakeLists.txt
sap/include/: bi_cgstab.h  config.h  config.h.in  conjugate_gradient.h  dirac_operator.h  fgmres.h  gauge_conf.h  operator_overloads.h  sap.h  tests.h  variables.h
sap/src/: bi_cgstab.cpp  compute_plaquette.cpp  conjugate_gradient.cpp  dirac_operator.cpp  fgmres.cpp  gauge_conf.cpp  main.cpp  sap.cpp  tests.cpp  variables.cpp
tests/: test.ipynb  test_dataloader.py  test_latticeConv.py  test_loss.py  test_operators.py
